[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/new_dynamicfont.tres" type="DynamicFont" id=2]

[node name="Control" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -72.0
margin_top = 72.0
margin_right = 72.0
margin_bottom = 86.0
custom_fonts/font = ExtResource( 2 )
text = "Glou"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -72.0
margin_top = -160.0
margin_right = 72.0

[node name="Play" type="Button" parent="VBoxContainer"]
margin_right = 144.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 2 )
text = "Play"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 22.0
margin_right = 144.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 2 )
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 144.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 2 )
text = "Quit"

[node name="Options" type="VBoxContainer" parent="."]
visible = false
anchor_bottom = 1.0
margin_right = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Master" type="VBoxContainer" parent="Options"]
margin_right = 120.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="Options/Master"]
margin_right = 120.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 2 )
text = "Master"

[node name="MasterSlider" type="HSlider" parent="Options/Master"]
margin_top = 16.0
margin_right = 120.0
margin_bottom = 32.0
min_value = -100.0

[node name="Music" type="VBoxContainer" parent="Options"]
margin_top = 36.0
margin_right = 120.0
margin_bottom = 68.0

[node name="Label" type="Label" parent="Options/Music"]
margin_right = 120.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 2 )
text = "Music"

[node name="MusicSlider" type="HSlider" parent="Options/Music"]
margin_top = 16.0
margin_right = 120.0
margin_bottom = 32.0
min_value = -100.0

[node name="SFX" type="VBoxContainer" parent="Options"]
margin_top = 72.0
margin_right = 120.0
margin_bottom = 104.0

[node name="Label" type="Label" parent="Options/SFX"]
margin_right = 120.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 2 )
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="Options/SFX"]
margin_top = 16.0
margin_right = 120.0
margin_bottom = 32.0
min_value = -100.0

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="value_changed" from="Options/Master/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="Options/Music/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="Options/SFX/SFXSlider" to="." method="_on_SFXSlider_value_changed"]
